--- a/Dental-master/index.html
+++ b/Dental-master/index.html
@@ -29,7 +29,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
+  <!-- -- ======================================================= -->
   * Template Name: Medicio - v4.9.1
   * Template URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
   * Author: BootstrapMade.com
@@ -93,53 +93,11 @@
     </div>
   </header><!-- End Header -->
 
-<!-- ======= Hero Section ======= -->
-<section id="hero">
-  <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
-
-    <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-
-    <div class="carousel-inner" role="listbox">
-
-      <!-- Slide 1 -->
-      <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg)">
-        <div class="container">
-          <h2>Welcome to <span>Medicio</span></h2>
-          <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
-          <a href="#about" class="btn-get-started scrollto">Read More</a>
-        </div>
-      </div>
-
-      <!-- Slide 2 -->
-      <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg)">
-        <div class="container">
-          <h2>Lorem Ipsum Dolor</h2>
-          <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
-          <a href="#about" class="btn-get-started scrollto">Read More</a>
-        </div>
-      </div>
-
-      <!-- Slide 3 -->
-      <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg)">
-        <div class="container">
-          <h2>Sequi ea ut et est quaerat</h2>
-          <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
-          <a href="#about" class="btn-get-started scrollto">Read More</a>
-        </div>
-      </div>
-
-    </div>
-
-    <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-    </a>
-
-    <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-      <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-    </a>
-
-  </div>
-</section><!-- End Hero -->
+  <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    
+  
+  </section><!-- End Hero -->
 
   <main id="main">
 
@@ -845,14 +803,14 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact Us</h2>
-         
+          <h2>Contact</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
       </div>
 
       <div>
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.78771293092!2d67.07764931541132!3d24.905221784032722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33f5ba1db4061%3A0xad2c7a2c189158d0!2sAptech%20Gulshan%20II!5e0!3m2!1sen!2s!4v1672314252791!5m2!1sen!2s" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
       </div>
 
       <div class="container">
@@ -873,14 +831,14 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>afnansaleem954@gmail.com<br>hassankhalidrafique@gmail.com</p>
+                  <p>afnansaleem954@gmail.com<br>hasankhalidrafique@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+92 310 1045990<br>+92 330 2561773</p>
+                  <p>0310-1045990<br>0330-2561773</p>
                 </div>
               </div>
             </div>
